--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <app-menu></app-menu>
-<app-iric></app-iric>
+<router-outlet></router-outlet>
+<!--<app-suma></app-suma>
+  <app-alumno-reactive></app-alumno-reactive>
+  <app-iric></app-iric>
+<app-operasbas></app-operasbas>
 
-<app-suma></app-suma>
+<app-distancia></app-distancia>
 
-<!--<div class="container">
+<div class="container">
   <p>Hola Mundo</p>
   <div>
     <h1>IDGS</h1>
