--- a/src/app/utl/formularios/operasbas/operasbas.component.html
+++ b/src/app/utl/formularios/operasbas/operasbas.component.html
@@ -1,32 +1,23 @@
-<div class="row">
-    <div class="col-6">
-        <mat-form-field class="example-form-field">
-            <mat-label>Clearable input</mat-label>
-            <input matInput type="text" [(ngModel)]="value">
-            <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-              <mat-icon>close</mat-icon>
-            </button>
-          </mat-form-field>
-        <div class="mb-3">
-            <label for="" class="form-label">Numero 1: </label>
-            <input class="form-control" name="n1" type="number" placeholder="Numero 1" [(ngModel)]="num1">
-        </div>
-        <div class="mb-3">
-            <label for="" class="form-label">Numero 2: </label>
-            <input class="form-control" name="n2" type="number" placeholder="Numero 2" [(ngModel)]="num2">
-        </div>
-        <div class="mb-3">
-            <label for="" class="form-label">Tipo de operacion: </label>
-            <input [(ngModel)]="opc" name="opc" type="radio" value="1">Sumar
-            <input [(ngModel)]="opc" name="opc" type="radio" value="2">Restar
-            <input [(ngModel)]="opc" name="opc" type="radio" value="3">Multiplicar
-            <input [(ngModel)]="opc" name="opc" type="radio" value="4">Dividir
-        </div>
-        <div class="mb-3">
-            <button class="btn btn-outline-primary" (click)="operaciones(num1, num2, opc)">Calcular</button>
-        </div>
-    </div>
-    <div class="col-6">
-        <h2>La suma es: {{result}}</h2>
-    </div>
-</div>
+<!--<mat-form-field class="example-form-field">
+    <mat-label>Clearable input</mat-label>
+    <input matInput type="text" [(ngModel)]="value">
+    <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field>-->
+
+  <div class="container">
+    <mat-form-field>
+      <input matInput [(ngModel)] = 'n1' type="number" placeholder="n1">
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput [(ngModel)] = 'n2' type="number" placeholder="n2">
+    </mat-form-field>
+    <mat-radio-group name="opciones" [(ngModel)] = "operacionSeleccionada">
+      <mat-radio-button *ngFor="let op of tipoOperaciones" [value]="op" name="opciones" style="margin: 10px">
+        {{op}}
+      </mat-radio-button>
+    </mat-radio-group>
+    <button mar-raised-button color="primary" (click)="calcular()" >Calcular</button>
+    <h1><p>El resultado es: {{res}}</p></h1>
+  </div>
