--- a/src/app/utl/menu/menu.component.html
+++ b/src/app/utl/menu/menu.component.html
@@ -16,11 +16,11 @@
         <a class="nav-link" routerLink=""> HOME </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink=""> Form1 </a>
+        <a class="nav-link" routerLink="AltaAlum"> Form1 </a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" routerLink=""> Rutas </a>
+        <a class="nav-link" routerLink="Irik"> Rutas </a>
       </li>
     </ul>
   </div>
